newsletter: fix captcha when visible

--- a/scss/components/_newsletter.scss
+++ b/scss/components/_newsletter.scss
@@ -40,6 +40,7 @@
   .widget-captcha {
     order: -1;
     width: 100%;
+    margin-bottom: var(--base-spacing-unit);
   }
 
   .submit {
